logo fix on tablet

--- a/app/assets/stylesheets/views/home.scss
+++ b/app/assets/stylesheets/views/home.scss
@@ -20,7 +20,7 @@ header {
   overflow: hidden;
   @media screen and (max-width: $break-tablet) {
     padding-left: 15px;
-    width: 266px;
+    width: 270px;
   }
 
   @media screen and (max-width: $break-small-tablet) {
